fixed alignment

--- a/css/style.css
+++ b/css/style.css
@@ -381,8 +381,8 @@ footer {
 }
 
 .image {
-    max-width: 100%;
-    height: auto;
+    width: 200px;
+    height: 200px;
 }
 
 .h2, .p, .p + .p {
